updates to fashion, art, about, and info pages

--- a/doqmeat/about/index.html
+++ b/doqmeat/about/index.html
@@ -40,7 +40,7 @@
 
 	<!-- 	about me -->
 	<div id="about" class="draggable">
-		<div class="header">webmaster_&amp;_site_info.txt<img onclick="closeBox('about')" src="!g/close.jpg" alt="close button" class="closebtn himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
+		<div class="header">webmaster_info.txt<img onclick="closeBox('about')" src="!g/close.jpg" alt="close button" class="closebtn himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
 		<div class="borderwrap">
 			<div class="wrapper-in padding">
 				<p><img title="this is me btw" src="/!g/deco/silly-cat.gif" align="left" style="margin-right:5px;" width="25%">
@@ -49,18 +49,18 @@
 				<p>（*＾-＾*）this is also me -&gt; <img src="/collection/internet-graphics/!g/silly-blinkie.gif" style="max-width:100%;" alt="silly blinkie :3"></p>
 
 				<p><a title="art by bitmapdreams" href="http://lastsecret.net/bitmapdreams/" target="_blank"><img src="/!g/deco/springflowers.gif" width="20%" align="right"></a>i enjoy listening to music, walking, messing around with code, petting my cat, and kissing my girlfriend.</p>
-				<p>this site started as something to mess around with when bored around april 2023 but as time passed i fell more and more in love with the idea of having a space where i can customize every corner of it and call it my home. i am mostly here to share my thoughts and have fun!</p>
+				<p>this site started as something to mess around with when bored around april 2023 but as time passed i fell more and more in love with the idea of having a space where i can customize every corner of it and call it my home. i am mostly here to share my thoughts, archive things important to me, and have fun!</p>
 
 				<p><img src="/!g/deco/mail.gif" align="left" style="margin-right:15px;">i won't reach out fast but do feel free to e-mail me at <a href="mailto:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;" target="_blank">&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;</a> about whatever, really! whether it be to tell me about what you thought about my site, to send me pictures of your cats, recommend me an album you think i might like, or even ask any coding / website related questions you might have. i might take a while to answer back but anything goes, thank you very much for reading!</p>
 
-				<p style="text-align: right"><b>last updated on: 18.jun.25</b></p>
+				<p style="text-align: right"><b>last updated on: 10.jan.26</b></p>
 			</div>
 		</div>
 	</div>
 
 	<!-- quizzes  -->
 	<div id="quiz" class="draggable">
-		<div class="header"><img src="!g/folder.png" class="folder"> quiz_results<img onclick="closeBox('quiz')" src="!g/close.jpg" alt="close button" class="closebtn himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
+		<div class="header"><img src="!g/folder.png" class="folder"> quiz_results/<img onclick="closeBox('quiz')" src="!g/close.jpg" alt="close button" class="closebtn himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
 		<div class="borderwrap">
 			<div class="wrapper-in padding">
 				<a href="http://cupped-expressions.net/cheese/quiz/" target="_blank"><img src="!g/quiz/chesse.gif" alt="I am emmental cheese!"></a><br><b><a href="http://cupped-expressions.net/cheese/quiz/" target="_blank">Cheese Test: What type of cheese are you?</a></b>
@@ -146,11 +146,14 @@
 
 	<!-- 	me af pics -->
 	<div id="me" class="draggable">
-		<div class="header"><img src="!g/folder.png" class="folder"> me_irl<img onclick="closeBox('me')" src="!g/close.jpg" alt="close button" class="closebtn himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
+		<div class="header"><img src="!g/folder.png" class="folder"> me_irl/<img onclick="closeBox('me')" src="!g/close.jpg" alt="close button" class="closebtn himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
 		<div class="borderwrap">
 			<div class="wrapper-in">
 				<marquee direction="left" scrollamount="9" behavior="alternate" onmouseover="this.stop();" onmouseout="this.start();">
 					<img src="!g/me-irl/homura-antisocial.jpeg">
+					<img src="!g/me-irl/born-today.jpg" alt="i was just born today madoka">
+					<img src="!g/me-irl/moth-tiger.jpg" alt="tiguer that is also a moth">
+					<img src="!g/me-irl/silly-doggy.jpg" alt="">
 					<img src="/collection/cats/!g/grindneverstarts.jpg">
 					<img src="!g/me-irl/canweget.png" alt="can we get ben & jerry's?">
 					<img src="!g/me-irl/cat-bbq.jpg" alt="cats having a nice bbq">
@@ -223,7 +226,7 @@
 	</div>
 
 	<div id="nostalgia" class="draggable">
-		<div class="header"><img src="!g/folder.png" class="folder"> nostalgia<img onclick="closeBox('nostalgia')" src="!g/close.jpg" alt="close button" class="closebtn himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
+		<div class="header"><img src="!g/folder.png" class="folder"> nostalgia/<img onclick="closeBox('nostalgia')" src="!g/close.jpg" alt="close button" class="closebtn himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
 		<div class="borderwrap">
 			<div class="wrapper-in">
 				<img title="these fucking DOGS" src="!g/nostalgia/the-dog-toys.jpg">
@@ -250,7 +253,7 @@
 
 	<!-- 	fav characters / fav charas -->
 	<div id="charas" class="draggable">
-		<div class="header"><img src="!g/folder.png" class="folder"> fav_characters<img onclick="closeBox('charas')" src="!g/close.jpg" alt="close button" class="closebtn himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
+		<div class="header"><img src="!g/folder.png" class="folder"> fav_characters/<img onclick="closeBox('charas')" src="!g/close.jpg" alt="close button" class="closebtn himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
 		<div class="borderwrap">
 			<div class="wrapper-in">
 				<img title="dogmeat from the fallout franchise" src="!g/fav-charas/dogmeat.png" alt="dogmeat">
@@ -276,7 +279,7 @@
 
 	<!-- 	toybox adopted fellas -->
 	<div id="toys" class="draggable">
-		<div class="header"><img src="!g/folder.png" class="folder"> toybox<img onclick="closeBox('toys')" src="!g/close.jpg" alt="close button" class="closebtn himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
+		<div class="header"><img src="!g/folder.png" class="folder"> toybox/<img onclick="closeBox('toys')" src="!g/close.jpg" alt="close button" class="closebtn himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
 		<div class="borderwrap">
 			<div class="wrapper-in padding">
 				<a href="https://miserabledolly.neocities.org" target="_blank"><img src="!g/adopted/nukacola-miserabledolly.gif" alt="nukacola bottlecap"></a>
