--- a/doqmeat/art/index.html
+++ b/doqmeat/art/index.html
@@ -59,12 +59,14 @@
     <hr>
     <center>
       <p><a href="#">top</a> / <a href="/">home</a> / <a href="/sitemap">sitemap</a></p>
-      <p>last updated on 16.nov.25</p>
+      <p>last updated on 10.jan.26</p>
       <p><b>credit:</b> <a href="/notebook/resources/fonts.html">fonts</a> used: momo, basiic</p>
     </center>
   </aside>
 
   <main>
+    <img class="box trad doodle 2024" src="!g/drawings/260110-sayaka.jpg" alt="sayaka about to hold hitomi's head. it is a traditional drawing" id="sayaka">
+    <div id="sayaka" class="captions">drew this on my 6th rebellion rewatch around... summer 2024 probably. i think.</div>
     <img id="power-curled-up" class="box digital 2025 doodle" src="!g/drawings/250517-3ds-power.JPG" alt="power curled up in a ball" loading="lazy">
     <div id="power-curled-up-caption" class="captions">
       <p>drew this when the power went out for a few hours and i was kinda sad about it so i drew power from memory all curled up with meowy.</p>
