--- a/doqmeat/fashion/index.html
+++ b/doqmeat/fashion/index.html
@@ -30,6 +30,7 @@
     </div>
     <div class="gallery">
       <h2 id="outfits">outfits</h2>
+      <img title="this fit makes me feel so elegant i love the sleeves. also, it's not a dress btw :p" src="!g/fits/251215.png" alt="a long white long sleeve shirt, with a black blouse on top and a long black skirt. the outfit looks like a dress." class="fit-pic caption-pic">
       <img src="!g/fits/251102.png" class="fit-pic caption-pic" alt="a patterned long sleeve shirt, green, yellow, and blue" tabindex="0" title="saw this shirt at work and i loved it oh so much!!!! my girlfriend said i looked like a patchwork teddy bear...">
       <img src="!g/fits/251013.png" class="fit-pic caption-pic" alt="a checkered green and dark blue shirt with baggy black pants" title="this shirt is kind of like a sweater i love it so much" tabindex="0">
       <img src="!g/fits/250403.png" alt="purple shirt with a puffy skirt" class="fit-pic caption-pic" title="i saw this skirt at my store and i IMMEDIATELY fell in love with it. i've never had a puffy skirt like this before. awesome." tabindex="0">
@@ -108,7 +109,7 @@
   </main>
 
   <footer>
-    <p>last updated: <b>01.nov.25</b></p>
+    <p>last updated: <b>10.jan.26</b></p>
     <p><a href="/">go back home?</a> / <a href="/sitemap">sitemap</a></p>
     <p><b>credit:</b> insp by ollie's <a href="https://olliveen.neocities.org/fashion" target="_blank">fashion page</a></p>
   </footer>
