--- a/doqmeat/info/index.html
+++ b/doqmeat/info/index.html
@@ -32,6 +32,7 @@ edited with love by des
       <ul>
         <li><a href="#info">info</a></li>
         <li><a href="#tools">tools</a></li>
+        <li><a href="#git">git updates</a></li>
       </ul>
       <h2>credit</h2>
       <ul>
@@ -68,6 +69,13 @@ edited with love by des
         <p>nonetheless, everything i use for my site can also be found on my <a href="/notebook">resources</a> page! for the fonts i've used you can look at all of them <a href="/notebook/resources/fonts.html">here</a> (o゜▽゜)o☆ </p>
 
         <p>a lot of the graphics in my site are from collection pages that rarely have their stuff sourced. i have tried my best to look for credit on some of these but if <u>i've used something that is not free to use please contact me and i will happily remove it</u>! if you know the credit for something you don't see credited or can't find what you're looking for, you're always welcome to send a msg in my chatbox or e-mail. happy coding!</p>
+      </div>
+      <div class="box" id="git">
+        <h2>git updates</h2>
+        <p>commits from the <a href="" target="_blank">github repo</a></p>
+        <div id="rss">
+          <script src="//rss.bloople.net/?url=https%3A%2F%2Fgithub.com%2Fdoqmeat%2Fdoqmeat.com%2Fcommits.atom&limit=50&showtitle=false&type=js"></script>
+        </div>
       </div>
       <div id="insp" class="box">
         <h2>sites that have inspired me!</h2>
@@ -465,7 +473,7 @@ edited with love by des
   <!--FOOTER-->
   <footer>
     <p><b>last updated on 11.jul.25</b></p>
-    <p><b>credit:</b> layout by <a href="https://codepen.io/cinni/pen/NWyNYmy?editors=1100" target="_blank">cinni</a>, header is a screenshot from <a title="stray gaming log" href="/vgs/games/stray/index.html" target="_blank">stray</a>, body bg from <a href="https://foollovers.com/mat/food05.html" target="_blank">foollovers</a> font is <i>momo's regular</i> by <a href="https://x.com/momodraws/status/1783568797950935295" target="_blank">momodraws</a></p>
+    <p><b>credit:</b> layout by <a href="https://codepen.io/cinni/pen/NWyNYmy?editors=1100" target="_blank">cinni</a>, body bg from <a href="https://foollovers.com/mat/food05.html" target="_blank">foollovers</a> font is <i>momo's regular</i> by <a href="https://x.com/momodraws/status/1783568797950935295" target="_blank">momodraws</a></p>
     <p><a href="/">homepage</a> - <a href="/sitemap">sitemap</a></p>
   </footer>
   <div class="container"></div>
