i dont even know what's in this commit but i trust

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -166,10 +166,10 @@ you're free to take whatever you need from my site, but please refrain from taki
 						<span id="statuscafe-content"></span>
 					</p>
 					<p><span class="title">playing: </span> silksong, style savvy</p>
-					<p><span class="title">watching: </span> jojo (part 4), fionna and cake (season 2), fallout (season 2)</p>
+					<p><span class="title">watching: </span> jojo (part 4), fallout (season 2)</p>
 					<p><span class="title">reading: </span> n/a</p>
-					<p><span class="title">working on: </span> 2025 journal log, 2025 music recap, photobook index rework, new f2u template</p>
-					<p class="date">last updated: 03.jan.26</p>
+					<p><span class="title">working on: </span> 2025 music recap, photobook index rework, new f2u template</p>
+					<p class="date">last updated: 10.jan.26</p>
 				</section>
 				<p id="notepad-notice">please turn on JS for this site omg... i promise i only use it for fun stuff.</p>
 				<section class="notepad-boxes" id="webrings">
