--- a/doqmeat/notebook/resources/graphics.html
+++ b/doqmeat/notebook/resources/graphics.html
@@ -113,6 +113,11 @@
 		<img src="/!g/pix/gaycat.gif">
 		<img src="/!g/pix/kiss-cat2.gif">
 		<img src="/!g/pix/annoyed-cat.gif">
+		<img src="/!g/pix/cat-watching-tv.gif" alt="">
+		<img src="/!g/pix/catloaf.gif" alt="">
+		<img src="/!g/pix/catrubhead.gif" alt="">
+		<img src="/!g/pix/catsilly.gif" alt="">
+
 
 
 
@@ -191,6 +196,9 @@
 		<h2 id="pix">pixels</h2>
 
 		<h3 id="fav">favicons</h3>
+		<img src="/!g/pix/book1.gif" alt="">
+		<img src="/!g/pix/purple-scene.gif" alt="">
+		<img src="/!g/pix/book2.gif" alt="">
 		<img src="/!g/pix/fish-icon.webp">
 		<img src="/!g/pix/dress.gif">
 		<img src="/!g/pix/flower-purple.gif">
