--- a/doqmeat/scrapbook/index.html
+++ b/doqmeat/scrapbook/index.html
@@ -23,6 +23,7 @@
 		<p>pages dedicated to my life throughout the year updated on a monthly basis!</p>
 
 		<ul>
+			<li><a href="2026/index.html">2026</a></li>
 			<li><a href="2025/index.html">2025</a></li>
 			<li><a href="2024/index.html">2024</a></li>
 		</ul>
