--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -28,7 +28,7 @@
 		<p>here's my button and code if you'd like to link back to me ☆⌒(*＾-゜)v and remember to save them to your own site!</p>
 		<img title="made in 20.apr.23" src="/!g/web/doqmeat.png" alt="doqmeat button">
 		<img title="made in 22.jun.24" src="/!g/web/doqmeat-2.png" alt="doqmeat button">
-		<h2><img src="/!g/pix/icon_k_love1.gif"> personal sites / blogs</h2>
+		<h2><img src="/!g/pix/icon_k_love1.gif"> personal websites</h2>
 
 		<div class="neo">
 			<a title="chara - the very first neocities site i came across and my main inspiration for creating my own!!! absolutely lovely site and webmaster as well" href="https://hunipyon.neocities.org" target="_blank"><img src="!g/hunipyon.gif"></a>
@@ -246,13 +246,7 @@
 			<a href="https://vulpecula.neocities.org/" target="_blank"><img src="!g/vulpecula.gif" alt="vulpecula"></a>
 			<a href="https://projectc190.teacake.org/" target="_blank"><img src="!g/project190.gif" alt="projectc190"></a>
 			<a href="https://sunnytea.org/" target="_blank" rel="noopener noreferrer"><img src="!g/sunnytea.gif" alt="sunnytea"></a>
-			<!-- <a href=""><img src="" alt=""></a>
-			<a href=""><img src="" alt=""></a>
-			<a href=""><img src="" alt=""></a>
-			<a href=""><img src="" alt=""></a>
-			<a href=""><img src="" alt=""></a>
-			<a href=""><img src="" alt=""></a>
-			<a href=""><img src="" alt=""></a> -->
+			<a href="https://catgirls.mov" target="_blank"><img src="!g/catgirls.gif" alt="catgirls"></a>
 		</div>
 
 		<a href="https://mewmiu.blog.fc2.com" target="_blank"><img src="https://blog-imgs-169.fc2.com/m/e/w/mewmiu/stamp.png"></a>
