new microblog post

--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -63,6 +63,11 @@
 				<button onclick="goToYear('y202x')">
 				<img src="" alt="2025 button thumbnail"> 2025</button> 
 					-->
+				<button onclick="goToYear('2026')">
+					<span class="year">2026</span>
+					<br>
+					<span id="logs2026">total logs: </span></button>
+
 				<button onclick="goToYear('2025')">
 					<span class="year">2025</span>
 					<br>
@@ -72,8 +77,15 @@
 					<span class="year">2024</span>
 					<br>
 					<span id="logs2024">total logs: </span></button>
+
+
 			</section>
 			<!-- 2025 section -->
+			<section id="y2026">
+				<article>
+					<p><b>13.jan.26 - 9pm</b> classes start tomorrow... though the good news is that i managed to get into my <b>databases</b> class! been meaning to get my hands on PHP and MySQL for my <a href="https://siinamota.doqmeat.com/fanlisting" class="outlink" target="_blank">siinamota fanlisting</a> so i can create a backend for it SOOOO this class will do wonders for that personal project of mine and i'm pretty excited for that. tee hee.</p>
+				</article>
+			</section>
 			<section id="y2025">
 				<!-- new entry! -->
 				<!-- button format: 'img path','alt','desc' -->
