2025 music recap yayy

--- a/doqmeat/music/index.html
+++ b/doqmeat/music/index.html
@@ -68,6 +68,7 @@
 
     <div id="updates" class="box">
       <h3>updates</h3>
+      <p><b>15.jan.26</b> - <a href="recaps/2025/">2025 recap</a></p>
       <p><b>17.nov.25</b> - added a new album to my <a href="fav-albums/index.html">favs</a>: <i>error</i> by uki3 / ewe</p>
       <p><b>09.sep.25</b> - featured music updated :3</p>
       <p><b>28.jul.25</b> - 6 months later i wrote my <a href="recaps/2024/index.html" target="mainframe">2024 recap</a></p>
