--- a/doqmeat/music/recaps/index.html
+++ b/doqmeat/music/recaps/index.html
@@ -25,7 +25,8 @@
 		<h2>yearly recaps</h2>
 		<p>every year i make a like a music summary with my top songs of the year, albums, favorite finds, and more!</p>
 		<ul>
-			<li><a href="2024/index.html">2024</a></li>
+			<li><a href="2025/index.html" target="_parent">2025</a></li>
+			<li><a href="2024/index.html" target="_parent">2024</a></li>
 			<li><a href="2023/index.html" target="_parent">2023</a></li>
 			<li><a href="2022/index.html" target="_parent">2022</a></li>
 		</ul>
@@ -33,7 +34,7 @@
 	</div>
 
 	<footer>
-		last updated: 25.dec.23 <br>
+		last updated: 15.jan.26 <br>
 		<a href="#">top</a> <span class="emoji2"></span> <a href="/music">music</a> <span class="emoji2"></span> <a href="/">home</a> <span class="emoji2"></span> <a href="/sitemap.html">sitemap</a>
 	</footer>
 </body>
