fixing typos and stuff

--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -83,6 +83,9 @@
 			<!-- 2025 section -->
 			<section id="y2026">
 				<article>
+					<p><b>17.jan.26 - 1pm</b> have been feeling weird lately. i gotta go on a walk.</p>
+				</article>
+				<article>
 					<p><b>13.jan.26 - 9pm</b> classes start tomorrow... though the good news is that i managed to get into my <b>databases</b> class! been meaning to get my hands on PHP and MySQL for my <a href="https://siinamota.doqmeat.com/fanlisting" class="outlink" target="_blank">siinamota fanlisting</a> so i can create a backend for it SOOOO this class will do wonders for that personal project of mine and i'm pretty excited for that. tee hee.</p>
 				</article>
 			</section>
@@ -90,7 +93,7 @@
 				<!-- new entry! -->
 				<!-- button format: 'img path','alt','desc' -->
 				<article>
-					<p><b>24.dec.25 - 12am</b> started trying to configure doqmeat.com through 11ty and NOPE! i don't think i want to deal with that. i feel like this site just has so much stuff that if i want to implement something like i have to start from 0. for now i am stuck with copying and pasting pages and you know what? what's okay... </p>
+					<p><b>24.dec.25 - 12am</b> started trying to configure doqmeat.com through 11ty and NOPE! i don't think i want to deal with that. i feel like this site just has so much stuff that if i want to implement something like i have to start from 0. for now i am stuck with copying and pasting pages and you know what? that's okay... </p>
 				</article>
 				<article>
 					<p><b>08.dec.25 - 1am</b> kinda wanna put my entire site through a static site generator bc it would make pages like <a href="/vgs">vgs</a>, <a href="/journal">journal</a>, <a href="/blog">blog</a>, <a href="/music">music</a> so much easier and i can stop relying on iframes as well but the thought of having to deal with THE REST of my site on a SSG just gives me nightmares.... so... i'm not quite sure what to do. the only SSG that i have knowledge on is 11ty and but man it would be so greatttt if i could use it for the other pages... maybe i'll figure it out one day. i need to test it out first of all.</p>
