--- a/doqmeat/music/cds/index.html
+++ b/doqmeat/music/cds/index.html
@@ -224,12 +224,12 @@
 
 		<div class="cd">
 			<img src="pics/siinamota-ikiru-cd.png" alt="ikiru cd" class="disk-spin">
-			<img class="cover" src="https://siinamota.doqmeat.com/scans/!g/ikiru/jewel-case-frontcover.jpg">
+			<img class="cover" src="https://siinamota.doqmeat.com/_files/scans/ikiru/jewel-case-frontcover.jpg" alt="ikiru album cover">
 			<div class="hov">
 				<div class="caption">
 					<h3>生きる (ikiru) - siinamota</h3>
 					<p><span class="fav"></span></p>
-					<a class="i" href="https://siinamota.doqmeat.com/scans/!g/ikiru/p5.jpg" target="_blank"><img src="https://siinamota.doqmeat.com/scans/!g/ikiru/p5.jpg"></a>
+					<a class="i" href="https://siinamota.doqmeat.com/_files/scans/ikiru/p5.jpg" target="_blank"><img src="https://siinamota.doqmeat.com/_files/scans/ikiru/p5.jpg" alt="ikiru album scan"></a>
 					<p><span class="ver"> regular</span></p>
 					<p><span class="date"> 22.feb.22</span></p>
 				</div>
