--- a/doqmeat/music/mini-pages/playlists.html
+++ b/doqmeat/music/mini-pages/playlists.html
@@ -30,6 +30,7 @@
 
 <body>
 	<div id="frame">
+		<h1>gonna be remaking this page at some point btw</h1>
 		<h2>playlists</h2>
 		<p>note: this page is a bit slow because of the multiple embeds. sorry in advance.</p>
 		<nav>navigation: <a href="#personal">personal</a> / <a href="#genres">genres</a> / <a href="#other">other</a></nav>
