--- a/doqmeat/notebook/resources/index.html
+++ b/doqmeat/notebook/resources/index.html
@@ -123,6 +123,7 @@
 
     <h3 id="css">CSS</h3>
     <ul>
+      <li><a href="https://www.cssportal.com" target="_blank">CSS portal</a> - the most extensive CSS reference site with a bunch of generators and tools!</li>
       <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Guides/Backgrounds_and_borders/Border-image_generator" target="_blank" rel="noopener noreferrer">dev mozilla's border-image generator</a></li>
       <li><a href="https://specificity.keegan.st/" target="_blank">specificity calculator</a></li>
       <li><a href="https://www.w3schools.com/cssref/index.php" target="_blank">w3schools CSS reference</a></li>
