added something to the microblog

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -135,7 +135,6 @@ you're free to take whatever you need from my site, but please refrain from taki
 			<aside id="sticker2" class="deco"><a title="by rice!" href="https://rice.place" target="_blank"><img src="!g/deco/BORNTOCODE.png" alt=""></a></aside>
 			<aside id="sticker6" class="deco"><a href="https://user.xmission.com/~emailbox/graphics.htm" target="_blank"><img title="from catstuff!" src="!f/v5/assets/meowunderstand.gif" alt="banner that reads 'which part of meow don't you understand?'"></a></aside>
 			<aside id="sticker8" class="deco"><a href="https://user.xmission.com/~emailbox/graphics.htm" target="_blank"><img title="from catstuff!" src="!f/v5/assets/benice.gif" alt="banner that reads 'please be nice to me, i love you'"></a></aside>
-			<aside id="sticker9" class="deco"><a title="my siinamota fansite :3" href="https://siinamota.doqmeat.com" target="_blank"><img src="https://siinamota.doqmeat.com/_files/buttons/siinamotafansite100x50.png" alt="siinamota fansite button"></a></aside>
 			<!-- notepad wrapper -->
 			<section id="notepad">
 				<section id="stats" class="notepad-boxes">
@@ -337,8 +336,7 @@ you're free to take whatever you need from my site, but please refrain from taki
 			<img src="/collection/internet-graphics/!g/nop.gif" alt="no nazi, no fascism, no racism">
 			<img src="/collection/internet-graphics/!g/dontfeedai.gif" alt="don't feed the AI!">
 			<a href="http://validator.w3.org/feed/check.cgi?url=https%3A//doqmeat.com/rss.xml" target="_blank"><img src="/notebook/tutorials/rss/valid.png" alt="valid rss" title="Validate my RSS feed"></a>
-			<a href="https://ko-fi.com/doqmeat" target="_blank"><img src="/notebook/!g/ko-fi-template-red.png" alt="support me ko-fi button"></a>
-			<a href="https://vgen.co/doqmeat/" target="_blank"><img src="!f/v5/assets/vgen.png" alt="vgen commissions and shop"></a>
+			<a title="a collective of my sites and projects :p" href="https://sepiarecord.net" target="_blank"><img src="https://sepiarecord.net/assets/imgs/sepiarecord-btn.png" alt="sepiarecord.net link"></a>
 			<br><br>
 			<img title="this little guy has been with me since the very beggining of this site, dedicated space for minecraft cat plush" src="!f/v5/assets/plush.png" width="100px" alt="minecraft cat plushie" style="image-rendering: pixelated;">
 			<br>
