--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -37,8 +37,9 @@
 				<li>eating breakfast</li>
 				<li>taking a nap alongside your cat</li>
 				<li>a nice hot bath</li>
+				<li>when people's faces light up when they see you</li>
 			</ul>
-			<small>last updated on <b>13.oct.25</b></small>
+			<small>last updated on <b>17.jan.26</b></small>
 		</div>
 	</div>
 
